# Ark

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: default_config.yaml  prompts.yaml
src/: __init__.py  config.py  main.py  workflow.py
src/database/: __init__.py  db.py  models.py
src/generators/: __init__.py  audio.py  dialogue.py  image.py  renderer.py  veo.py  video.py
src/tui/: __init__.py  app.py  styles.tcss
